# CandyLauncher

./: .gitignore  .gitmodules  AGENTS.md  ActionBase.hpp  AppTools.hpp  BaseTools.hpp  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CandyLauncher.cpp  CandyLauncher.rc  CandyLauncher.sln1  CandyLauncher.vcxproj.filters1  CandyLauncher.vcxproj1  Constants.hpp  CustomBgcolorView.hpp  CustomButtonHelper.hpp  DataKeeper.cpp  DataKeeper.hpp  EditCustomPaint.hpp  EditHelper.hpp  EditScrollSyncHelper.hpp  FileInfo.hpp  GEMINI.md  GlassHelper.hpp  HotkeyEditView.h  IndexedManager.hpp  LICENSE  ListViewManager.cpp  ListViewManager.h  ListedRunnerPlugin.cpp  ListedRunnerPlugin.h  MainTools.hpp  PinyinHelper.cpp  PinyinHelper.h  PluginRunningApps.hpp  README.md  RefreshAction.cpp  RenameDialog.hpp  Resource.h  (+36 more)
actions/: ActionNormal.cpp  ActionNormal.hpp  ActionRefresh.cpp  ActionRefresh.hpp
cmakefile/: copy_if_missing.cmake
common/: AppController.hpp  Constants.hpp  DataKeeper.cpp  DataKeeper.hpp  GlobalState.cpp  GlobalState.hpp  I18n.hpp  I18nResource.h  Resource.h  pch.h  settings.json
deprecated/: IconUpdateTask.h  bkcode.txt
docs/: DOC_APP_UPDATE.md  DOC_BACKLOG_MD.md  DOC_GIT_RECOVER_FILE.md  DOC_PLUGIN_API_ABI_NOTES.md  DOC_SETTINGS.md  I18N_TODO.md  main-window-paint-flow.md  pinyin_doc.md
lang/: ResourceDllEntry.cpp  en-US.rc  zh-CN.rc
manager/: EditControlPainter.hpp  EditCustomPaint.hpp  EditManager.hpp  ListViewManager.h  ListViewManager.hpp  SkinHelper.h  SkinHelper.hpp  TextMatchHelper.hpp  TrayMenuManager.h  TrayMenuManager.hpp
model/: FileInfo.hpp  ScoredAction.hpp  SettingItem.hpp  TraverseOptions.hpp
plugins/: ActionBase.hpp  ActionNormal.hpp  BaseAction.hpp  BaseLaunchAction.hpp  CMakeLists.txt  ExamplePlugin.cpp  ExamplePlugin.hpp  Plugin.h  Plugin.hpp  PluginCommon.cmake  PluginManager.hpp  README.md  SimplePlugin.h  TODO.txt  TODO2.md  TODO3.txt  TODO4.txt  TODO5.txt
plugins/Bookmark/: BookmarkAction.hpp  BookmarkPlugin.cpp  BookmarkPluginData.hpp  BookmarkUtil.hpp  CMakeLists.txt
plugins/BrowserHistory/: BrowserHistoryAction.hpp  BrowserHistoryPlugin.cpp  BrowserHistoryUtil.hpp  CMakeLists.txt
plugins/CalcExprtk/: CMakeLists.txt  CalcAction.hpp  CalcPlugin.cpp  CalcPlugin.hpp  ExprtkPlus.hpp  ExprtkWrapper.hpp  PluginData.hpp  README.md  latex.hpp  update_exprtk.cmd
plugins/CherryTree/: CMakeLists.txt  CherryTreeAction.hpp  CherryTreePlugin.cpp  CherryTreePluginData.hpp  CherryTreeUtil.hpp  README.md
plugins/EverNote/: CMakeLists.txt  EverNoteAction.hpp  EverNotePlugin.cpp  EverNoteUtil.hpp  Note_Links.md
plugins/Example/: CMakeLists.txt  ExampleAction.hpp  ExamplePlugin.cpp  ExamplePlugin.hpp  ExamplePlugin.vcxproj
plugins/FeatureLaunch/: CMakeLists.txt  FeatureLaunchAction.hpp  FeatureLaunchPlugin.cpp
plugins/Folder/: CMakeLists.txt  ContextMenuHelper.hpp  CreateFileRunAction.hpp  FileAction.hpp  FileSystemTraverserWrapper.hpp  FolderDataKeeper.hpp  FolderPlugin.cpp  FolderPlugin.hpp  FolderPluginConfigUtils.hpp  FolderPluginData.hpp  IndexManager.hpp  IndexManagerLogic.hpp  IndexManagerState.hpp  IndexManagerWindow.hpp  ListedRunnerPlugin.h1  RunnerConfigUtils.hpp  ShortcutFixWindow.hpp  ShortcutRepairTool.hpp  UWPAppsTraverserWrapper.hpp  Utils.hpp  config_folder_plugin.json
plugins/JetbrainsWorkspaces/: CMakeLists.txt  JbAction.hpp  JbPlugin.cpp  JbPluginUtil.hpp  Main.cpp  PluginAction.hpp  PluginData.hpp  PluginUtil.hpp  config_ide_paths.yaml
plugins/OneNote/: Application_interface_OneNote.md  CMD.txt  CMakeLists.txt  FindOneNoteUtil.hpp  OneNoteAction.hpp  OneNotePlugin.cpp  OneNotePluginData.hpp  OneNoteSimple.hpp  OneNoteUtil.hpp  README.md
plugins/PluginTest/: CMakeLists.txt  Main.cpp
plugins/Registry/: CMakeLists.txt  RegistryAction.hpp  RegistryEntry.hpp  RegistryPlugin.cpp  RegistryPluginData.hpp  RegistryUtil.hpp
plugins/RunningApp/: CMakeLists.txt  ContextMenuHelper.hpp  PluginData.hpp  RunningAppAction.hpp  RunningAppPlugin.cpp  RunningAppPlugin.hpp
plugins/Service/: CMakeLists.txt  ServiceAction.hpp  ServicePlugin.cpp  ServicePluginData.hpp  ServiceUtil.hpp
plugins/SmallToolBox/: CMakeLists.txt  PluginAction.hpp  PluginUtil.hpp  ToolBoxAction.hpp  ToolBoxPlugin.cpp  ToolBoxPluginData.hpp  main.cpp
plugins/TextFile/: CMakeLists.txt  (+3 more)
plugins/VisualStudio/: CMakeLists.txt  VisualStudioAction.hpp  VisualStudioPlugin.cpp  VisualStudioPluginData.hpp  VisualStudioUtil.hpp
plugins/WebSearch/: CMakeLists.txt  SearchManagerWindow.hpp  WebSearchAction.hpp  WebSearchHotkeyManager.hpp  WebSearchPlugin.cpp  WebSearchPluginData.hpp  WebSearchUtil.hpp
plugins/WindowsSearch/: CMakeLists.txt  README.md  WindowsSearchAction.hpp  WindowsSearchPlugin.cpp  WindowsSearchPluginData.hpp  WindowsSearchUtil.hpp
scripts/: run_build.cmd  run_build_calc_plugin.cmd  run_build_example_plugin.cmd  run_candylauncher.cmd  run_cmake_generate.cmd  run_debug_test.cmd
skins/: skin_default.json  skin_night.json  skin_test_bk2.json
tests/: CMakeLists.txt  SplitWordsTest.cpp
unuseful/: IconUpdateTask.cpp  bkcode.txt
util/: BaseTools.hpp  BitmapUtil.hpp  ClipboardUtil.hpp  ColorUtil.hpp  FileSystemTraverser.hpp  FileUtil.hpp  FullScreenDetectUtil.hpp  LogUtil.hpp  MainTools.hpp  MathUtil.hpp  MyJsonUtil.hpp  MyToastUtil.hpp  NinePatchImage.hpp  PinyinHelper.cpp  PinyinHelper.h  PinyinHelper.hpp  RegistryAppsTraverser.hpp  RunningWindowsTraverser.hpp  ShortCutDetectUtil.hpp  ShortcutUtil.hpp  StringUtil.hpp  TaskWorker.hpp  ThreadPool.h  ThreadPool.hpp  TraverseFilesHelper.hpp  UWPAppsTraverser.hpp  UpdateManager.hpp  json.hpp
view/: CustomButtonHelper.hpp  CustomComboBox.hpp  CustomEdit.hpp  EXPANDSWITCH_IMPLEMENTATION_SUMMARY.md  EXPANDSWITCH_USAGE.md  EXPANDSWITCH_WIN8_STYLE_UPDATE.md  EditScrollSynchronizer.hpp  GlassHelper.hpp  HotkeyEditView.h  HotkeyEditView.hpp  ScrollViewController.hpp  ScrollViewHelper.hpp  SwitchState.hpp  SwitchView.h  SwitchView.hpp  SwitchViewPainter.hpp  ToolTipHelper.hpp
window/: SettingWindow.hpp  SettingsHelper.hpp  SettingsManager.hpp  SettingsWindow.hpp  Shell32IconViewer.hpp  todo.md
(+20 files in other folders)
